[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
polars = { version = "0.25.1", features=["describe", "lazy","object", "strings","dtype-categorical","list_eval","rows","round_series", "dtype-full", "rank"] }
